--- a/menu/index.html
+++ b/menu/index.html
@@ -139,7 +139,7 @@
     </header>
     <div class="tile-menu">
         <div class="tile">
-            <a href="..\quest\index.html"><img src="http://sntsadovoe.ru/images_SP/history_Romanovs/Mich_Fedor.jpg"
+            <a href="..\quest\index.html"><img src="..\menu\Image\MihailRom.png"
                     alt="Test 1">
                 <h2>Михаил Федорович</h2>
             </a>
