--- a/menu/index.html
+++ b/menu/index.html
@@ -178,7 +178,7 @@
             <h2>Екатерина II</h2>
         </div>
         <div class="tile">
-            <img src="..\menu\Image\pavel1.png" alt="Test 5">
+            <img src="..\menu\Image\Pavel1.png" alt="Test 5">
             <h2>Павел I</h2>
         </div>
         <div class="tile">
