--- a/about/contact.html
+++ b/about/contact.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Романовы: история династии</title>
+    <title>Контакты</title>
     <link rel="apple-touch-icon" sizes="57x57" href="../Ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../Ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../Ico/apple-icon-72x72.png">
@@ -135,13 +135,6 @@
             text-align: right;
         }
 
-        /* Общие стили*/
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            line-height: 1.5;
-            margin: 0;
-        }
 
         ul {
             list-style: none;
