--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Романовы: история династии</title>
+    <title>О нас</title>
     <link rel="apple-touch-icon" sizes="57x57" href="../Ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="../Ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="../Ico/apple-icon-72x72.png">
