--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 			transform: translate3d(0, -100%, 0) scale(.75);
 			opacity: 0;
 		}
-
+		а {
+      text-decoration: none;
+    }
 		.hero-inner {
 			background-image: url('https://sun9-86.userapi.com/impf/c844721/v844721619/a4f71/E7NB60krLSA.jpg?size=1920x1080&quality=96&sign=53dd0824b93b3ef99339f9d99ea6f279&c_uniq_tag=Wx-qI2aSH-u15KUpCqct3quaHmEEeKXsATvy4l4hoZw&type=album');
 			background-size: cover;
@@ -79,7 +81,7 @@
 		}
 
 		.text-light {
-			color: black
+			color: black;
 		}
 
 		.font-alt {
@@ -124,6 +126,9 @@
 			opacity: .7;
 			text-decoration: none;
 		}
+		.maintext {
+			text-decoration: none;
+		}
 	</style>
 </head>
 
@@ -131,7 +136,7 @@
 	<div class="hero">
 		<div class="hero-inner">
 			<div class="hero-title">
-				<h1 class="text-light title font-2"><a href="menu\index.html">Романовы: история династии</a></h1>
+				<h1 class="text-light title font-2"><a class="maintext"href="menu\index.html" >Романовы: история династии</a></h1>
 				<p class="text-capitalize text-light">historia magistra vitae</p>
 			</div>
 		</div>
