--- a/quest/index.html
+++ b/quest/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-
+  <title>Михаил Федорович</title>
   <link rel="apple-touch-icon" sizes="57x57" href="../Ico/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="../Ico/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="../Ico/apple-icon-72x72.png">
@@ -21,7 +21,6 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
-  <title>Романовы: история династии</title>
   <link href="style.css" rel="stylesheet">
 </head>
 
