--- a/about/index.html
+++ b/about/index.html
@@ -31,6 +31,9 @@
             background-color: #fff;
             box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
         }
+        main p {
+            font-size: 24px;
+        }
 
         .logo {
             display: flex;
@@ -159,7 +162,7 @@
     </header>
     <main>
         <h1>О нас</h1>
-        <p>Наш исторический сайт посвящен популяризации нашего наследия и сохранению нашей богатой истории для будущих
+        <p>Наш исторический сайт посвящен популяризации исторического наследия и сохранению нашей богатой истории для будущих
             поколений. Мы считаем, что знание нашего прошлого - ключ к пониманию нашего настоящего и формированию
             будущего.</p>
         <p>Наша главная цель - сохранить историческое наследие нашей страны и распространять знание о нем в широких
