--- a/quest/FA/index.html
+++ b/quest/FA/index.html
@@ -21,14 +21,14 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta charset="UTF-8">
-  <link href="style.css" rel="stylesheet">
+  <link href="..//style.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <div class="logo">
-      <img src="..\..\hst.PNG" alt="Логотип сайта">
-      <h1>Романовы: история династии</h1>
+      <a href="..\..\menu\index.html"><img src="..\hst.PNG" alt="Логотип сайта"></a>
+      <a href="..\..\menu\index.html"><h1>Романовы: история династии</h1></a>
     </div>
     <nav>
       <ul>
