--- a/about/index.html
+++ b/about/index.html
@@ -43,14 +43,15 @@
             width: 50px;
             height: 50px;
             margin-right: 10px;
+            border-radius: 25%;
         }
 
         h1 {
-            font-size: 24px;
-            font-weight: bold;
-            color: #333;
-            margin: 0;
-        }
+    font-size: 24px;
+    font-weight: bold;
+    color: #333;
+    margin: 15px;
+}
 
         nav ul {
             list-style: none;
@@ -143,14 +144,18 @@
         footer p {
             text-align: right;
         }
+        a {
+    color:#000000;
+    text-decoration: none;
+}
     </style>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="..\hst.PNG" alt="Логотип сайта">
-            <h1>Романовы: история династии</h1>
+            <a href="..//menu/index.html"><img src="..\hst.PNG" alt="Логотип сайта"></a>
+            <a href="..//menu/index.html"><h1>Романовы: история династии</h1></a>
         </div>
         <nav>
             <ul>
