--- a/menu/index.html
+++ b/menu/index.html
@@ -27,8 +27,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="../hst.PNG" alt="Логотип сайта">
-            <h1>Романовы: история династии</h1>
+            <a href="..//menu/index.html"><img src="..\hst.PNG" alt="Логотип сайта"></a>
+            <a href="..//menu/index.html"><h1>Романовы: история династии</h1></a>
         </div>
         <nav>
             <ul>
